--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,14 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    background: #edf3f8;
 }
 
 a {
@@ -36,3 +41,4 @@ button {
   padding: 0.5rem 1rem;
   font-weight: bold;
 }
+
